Update the `CaseAssignedUserRolesController` and the rest of the services to explicitly enforce the `application/hal+json` and `application/json` media types.